Feat: Initialize local MongoDB instance and load raw data Feat: Design flexible NoSQL schema to accommodate data from multiple Slack workspaces Feat: Optimize storage and query efficiency by organizing different interaction types into separate tables Feat: Design PostgreSQL table schema for ML features Feat: Create schema using dbdiagram.io or DbSchema Feat: Implement Python script to create database tables Feat: Load relevant features into the database

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ conf/**/*credentials*
 # ignore everything in the following folders
 data/**
 logs/**
-
+/notebooks/mlruns/*
 # except their sub-folders
 !data/**/
 !logs/**/
